cabal-version:       >=1.10
name:                aoc
version:             0.1.0.0
author:              Lena Martens
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable aoc
  main-is:             Main.hs
  other-modules: 
                Day2 ,
                Day3 ,
                Day4 ,
                Day5 ,
                Day6 , 
                Day7 ,
                Day8 ,
                Day9 ,
                Day10,
                Day11,
                Day12,
                Parser
  build-depends:
      base >=4.13 && <4.14,
      split,
      parsec,
      containers,
      monad-memo,
      Stack,
      timeit
  ghc-options: -Wno-missing-home-modules


  -- hs-source-dirs:
  default-language:    Haskell2010
