cabal-version:       >=1.10
name:                aoc
version:             0.1.0.0
author:              Lena Martens
build-type:          Simple

executable aoc
  main-is:             Main.hs
  other-modules: 
                Day1 ,
                Day2 ,
                Day3 ,
                Day4 ,
                Day5 ,
                Day6 , 
                Day7 ,
                Day8 ,
                Day9 ,
                Day10,
                Day11,
                Day12,
                Day13,
                Day14,
                Day15,
                Day16,
                Day17,
                Parser
  build-depends:
      base >=4.14 && <4.15,
      split,
      parsec,
      containers,
      monad-memo,
      Stack,
      timeit,
      astar,
      unordered-containers
  ghc-options: -Wno-missing-home-modules


  -- hs-source-dirs:
  default-language:    Haskell2010
